ReSharper.FSharp/test/data/parsing/errors/Signature - Id 02.fsi
module M

x
val y: int
